apps/immich/network-policies/network-policy-backup.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backup-policy
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: postgres-backup
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
          podSelector:
            matchLabels:
              app: immich-db
      ports:
        - protocol: TCP
          port: 5432
