apps/immich/network-policies/network-policy-machine-learning.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: machine-learning-policy
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: machine-learning-server
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
          podSelector:
            matchLabels:
              app: immich-server
      ports:
        - protocol: TCP
          port: 3003
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
          podSelector:
            matchLabels:
              app: redis
      ports:
        - protocol: TCP
          port: 6379
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 192.168.0.0/16
              - 172.16.0.0/12
        - ipBlock:
            cidr: ::/0
            except:
              - 2001:db8:42::/64
              - 2001:db8:43::/112
              - fc00::/7
      ports:
        - protocol: TCP
          port: 443
