apps/immich/network-policies/network-policy-redis.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-policy
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
          podSelector:
            matchLabels:
              app: immich-server
      ports:
        - protocol: TCP
          port: 6379
